<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/jop"
        android:title="@string/jobs"
        android:onClick="posts_company"
        android:icon="@drawable/jops"/>

    <item android:id="@+id/company"
        android:title="@string/Company2"
        android:onClick="company"
        android:icon="@drawable/company"/>

    <item android:id="@+id/worker"
        android:title="@string/worker2"
        android:onClick="worker_profile"
        android:icon="@drawable/work2"/>

    <item android:id="@+id/projects"
        android:title="@string/Projects"
        android:onClick="project"
        android:icon="@drawable/project"/>

    <item android:id="@+id/group"
        android:title="@string/Groups"
        android:onClick="groups"
        android:icon="@drawable/group"/>

    <item android:id="@+id/setting"
        android:title="@string/Settings"
        android:onClick="settings"
        android:icon="@drawable/ic_settings"/>

    <item android:id="@+id/logout"
        android:title="@string/Logout"
        android:onClick="log_out"
        android:icon="@drawable/logout"/>

</menu>