<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:orientation="vertical"
    android:layout_height="match_parent">

         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <EditText
                     android:id="@+id/num_worker_post"
                     android:layout_width="330dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="50dp"
                     android:hint="@string/write_number_worker_needed"
                     android:textAlignment="center" />

                 <EditText
                     android:id="@+id/descreption_work"
                     android:layout_width="330dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="15dp"
                     android:hint="@string/description"
                     android:textAlignment="center" />

                 <ImageView
                     android:id="@+id/imagepost"
                     android:layout_width="330dp"
                     android:layout_height="330dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="15dp"
                     android:src="@drawable/logo" />
                 <TextView
                     android:layout_width="330dp"
                     android:layout_height="wrap_content"
                     android:textColor="#ff598b"
                     android:onClick="chose_image"
                     android:layout_gravity="center"
                     android:textAlignment="center"
                     android:text="@string/choses_image"
                     android:textSize="18dp" />

                 <TextView
                     android:id="@+id/specialization"
                     android:layout_width="330dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
                     android:textSize="18dp"
                     android:hint="@string/specialization"
                     android:textAlignment="center" />

                 <Spinner
                     android:id="@+id/Qualification2"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="60dp">
                 </Spinner>

                 <Button
                     android:id="@+id/btn_post"
                     android:layout_width="330dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:onClick="up_post"
                     android:textAlignment="center"
                     android:layout_marginTop="40dp"
                     android:background="#1763ad"
                     android:textColor="#fff"
                     android:textSize="22dp"
                     android:layout_marginBottom="30dp"
                     android:text="@string/create_post"
                     />
             </LinearLayout>

         </ScrollView>


</LinearLayout>

